WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181118
REGRESSION(
r226228
) Build error with unqualified isfinite() in MediaCapabilities.cpp
https://bugs.webkit.org/show_bug.cgi?id=181118
Summary
REGRESSION(r226228) Build error with unqualified isfinite() in MediaCapabilit...
Ms2ger (he/him; ⌚ UTC+1/+2)
Reported
2017-12-22 01:38:54 PST
At least locally; the bots don't seem to be too bothered. Either way, all but one of the isfinite() calls are qualified, so I'll do the same to the last one.
Attachments
Patch
(1.47 KB, patch)
2017-12-22 01:48 PST
,
Ms2ger (he/him; ⌚ UTC+1/+2)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ms2ger (he/him; ⌚ UTC+1/+2)
Comment 1
2017-12-22 01:48:19 PST
Created
attachment 330114
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-22 02:12:24 PST
Comment on
attachment 330114
[details]
Patch Clearing flags on attachment: 330114 Committed
r226262
: <
https://trac.webkit.org/changeset/226262
>
WebKit Commit Bot
Comment 3
2017-12-22 02:12:25 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-22 02:13:25 PST
<
rdar://problem/36193479
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug