REGRESSION(r226228) Build error with unqualified isfinite() in MediaCapabilities.cpp https://bugs.webkit.org/show_bug.cgi?id=181118

Unreviewed build fix.


* Modules/mediacapabilities/MediaCapabilities.cpp:
(WebCore::isValidVideoConfiguration): qualify the one unqualified isfinite() call.


Canonical link: https://commits.webkit.org/196986@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226262 268f45cc-cd09-0410-ab3c-d52691b4dbfc